--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architect</title>
     <link rel="stylesheet" href="styles/architect.css">
 </head>
+
 <body>
+    <!-- header starting -->
     <header>
         <nav>
-            <h3>G3 Architects</h3>
+            <h3 class="nav-heading">G3 Architects</h3>
             <ul>
                 <li><a href=""></a>Home</li>
                 <li><a href=""></a>About</li>
@@ -17,12 +20,52 @@
                 <li><a href=""></a>Login</li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-heading">Brand New
+                    Group of Architects
+                </h1>
+                <p class="banner-description">
+                    There are many variations of
+                    passages of Lorem Ipsum
+                    available, but the majority
+                    have suffered alteration in
+                    some form, by injected humour,
+                    or randomised
+                    words which don't look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
+    <!-- header end -->
     <main>
-
+        <!-- teams section start -->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="team-heading"><span class="quick-list">Quick list</span> <span class="of-our">of Our</span>
+                    <span class="features">Features</span></h3>
+                <p class="teams-description">There are many variations of
+                    passages of Lorem Ipsum
+                    available, but the majority
+                    have suffered alteration in
+                    some form, by injected humour,
+                    or randomised
+                    words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
