--- a/index.html
+++ b/index.html
@@ -64,7 +64,46 @@
         </section>
         <!-- feature section -->
         <section class="feature">
-
+                <div class="feature-content">
+                        <h3 class="feature-heading">Features you will <br> love & enjoy</h3>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+                             which don't look even</p>
+                             <div class="card">
+                                <h4 class="feature-card-heading">Dexktop & Mobile Version</h4>
+                                  <p class="feature-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration 
+                                    in some form, by injected
+                                     humour, or randomised..........
+                                     .</p>  
+                             </div>
+                             <div class="card">
+                                <h4 class="feature-card-heading">Dexktop & Mobile Version</h4>
+                                  <p class="feature-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration 
+                                    in some form, by injected
+                                     humour, or randomised..........
+                                     .</p>  
+                             </div>
+                             <div class="card">
+                                <h4 class="feature-card-heading">Dexktop & Mobile Version</h4>
+                                  <p class="feature-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration 
+                                    in some form, by injected
+                                     humour, or randomised..........
+                                     .</p>  
+                             </div>
+                             <div class="card">
+                                <h4 class="feature-card-heading">Dexktop & Mobile Version</h4>
+                                  <p class="feature-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration 
+                                    in some form, by injected
+                                     humour, or randomised..........
+                                     .</p>  
+                             </div>
+                </div>
+                <div class="feature-img">
+                    <img src="images/architect.png" alt="">
+                    <div class="ten-years-badgs">
+                        <h2>10+ years</h2>
+                        <p>Experience</p>
+                    </div>
+                </div>
         </section>
         <!-- facts section -->
         <section class="facts">
