--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams-content">
-                <h3 class="team-heading"><span class="quick-list">Quick list</span> <span class="of-our">of Our</span>
+                <h3 class="team-heading"><span class="quick-list">Quick list</span> <span class="of-our">of Our <br></span>
                     <span class="features">Features</span></h3>
                 <p class="teams-description">There are many variations of
                     passages of Lorem Ipsum
@@ -107,11 +107,13 @@
         </section>
         <!-- facts section -->
         <section class="facts">
-            <h3>Some Facts</h3>
+            <div class="fact-description">
+                <h3>Some Facts</h3>
             <p>There are many variations of 
                 passages of Lorem Ipsum 
-                available, but the majority 
+                available, but <br> the majority 
                 have suffered alteration.</p>
+            </div>
                 <div class="facts-card-container">
                     <!-- .card*4>img+h2.card-stats+p.card-title -->
                     <div class="card">
@@ -151,8 +153,9 @@
                 </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <h3 class="footer-header">All rights reserved copyright@2023 startup
+             landing page design</h3>
     </footer>
 </body>
 
